--- a/project.config.json
+++ b/project.config.json
@@ -52,7 +52,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "3.8.0",
-  "appid": "wx22bed46c4a49aea5",
+  "appid": "wx342b2af70f88dd27",
   "projectname": "tdesign-miniprogram-starter-retail",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
