页面图标更新、布局更新、bug修复、我的订单界面修复

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore nested duplicate project under pages/images
+pages/images/*
+!pages/images/test.jpg
 # Node & Logs
 node_modules/
 npm-debug.log*
