--- a/pages/images/app.json
+++ b/pages/images/app.json
@@ -59,7 +59,7 @@
       },
       {
         "pagePath": "pages/category/index",
-        "text": "分类"
+        "text": "精神谱系"
       },
       {
         "pagePath": "pages/cart/index",
