--- a/android-native/local.properties
+++ b/android-native/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 15 16:17:07 CST 2025
-sdk.dir=D\:\\Projram\\Android\\SDK
+#Wed Oct 15 23:30:01 GMT+08:00 2025
+sdk.dir=C\:\\Users\\15870\\AppData\\Local\\Android\\Sdk
