--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,32 @@
-*.mp4 filter=lfs diff=lfs merge=lfs -text
+# 统一换行符与文本识别
+* text=auto
+
+# 代码文件使用 LF（跨平台稳定）
+*.java text eol=lf
+*.kt text eol=lf
+*.kts text eol=lf
+*.xml text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md text eol=lf
+*.gradle text eol=lf
+*.properties text eol=lf
+*.gitignore text eol=lf
+
+# Windows 批处理保留 CRLF
+*.bat text eol=crlf
+*.cmd text eol=crlf
+
+# 二进制资源（不做行尾转换）
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.webp binary
+*.mp4 binary
+*.jar binary
+*.aar binary
+*.keystore binary
+*.jks binary
+
+# 锁文件（如使用）请在团队内约定合并策略；此处不设置特殊 merge driver
