--- a/shoes_houduan/pom.xml
+++ b/shoes_houduan/pom.xml
@@ -18,7 +18,7 @@
     <description>Shoes backend for Android app</description>
 
     <properties>
-    <java.version>21</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -93,6 +93,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <!-- 统一使用 Java 17 编译，避免 IDE 或环境把 source 提到 21 导致告警 -->
+                    <release>17</release>
+                </configuration>
             </plugin>
         </plugins>
     </build>
