native 会话列表/聊天 创建群/私聊 长按退出或群主强删；发送去重；JWT用户名一致化 & backend: 新增删除/退出接口、返回

--- a/android-native/app/src/main/AndroidManifest.xml
+++ b/android-native/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name=".VillageActivitiesActivity" />
         <activity android:name=".ScanActivity" />
         <activity android:name=".LogsActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".ConversationsActivity" />
     </application>
 
 </manifest>
