--- a/android-native/app/build.gradle
+++ b/android-native/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.activity:activity-ktx:1.9.2'
     // 网络图片加载（Coil）
     implementation 'io.coil-kt:coil:2.6.0'
