--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".ScanActivity" />
         <activity android:name=".LogsActivity" />
         <activity android:name=".ChatActivity" />
+        <activity android:name=".ConversationsActivity" />
     </application>
 
 </manifest>
