feat(android-native): 商品详情改为尺码浮窗后再下单；订单确认页新增收货地址；订单详情/列表展示尺码；本地订单结构支持size与地址；登录请求增加5s超时兜底\n\n- 商品详情：GridLayout 尺码选择（支持35-44区间或逗号列表），避免列数为0导致崩溃\n- 确认下单：必填校验姓名/地址，写入到订单\n- 订单详情/列表：显示尺码与收货信息\n- LocalOrderStore：OrderItem.size、Order.address相关字段\n- 登录：网络超时时给出提示并恢复按钮可点

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity android:name=".LogsActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".ConversationsActivity" />
+        <!-- 购买流程 -->
+        <activity android:name=".order.OrderConfirmActivity" />
+        <activity android:name=".order.OrderDetailActivity" />
     </application>
 
 </manifest>
