--- a/android-native/app/src/main/AndroidManifest.xml
+++ b/android-native/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity android:name=".LogsActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".ConversationsActivity" />
+        <!-- 购买流程 -->
+        <activity android:name=".order.OrderConfirmActivity" />
+        <activity android:name=".order.OrderDetailActivity" />
+        <activity android:name=".order.OrderListActivity" />
     </application>
 
 </manifest>
